# nku-compiler-2024-rs

./: .buildinfo  .gitignore  Cargo.toml  LICENSE  README.md  TEST.txt  asm-basics.html  codegen.html  env-setup.html  genindex.html  if.cpp  index.html  intro.html  irgen.html  llvm-basics.html  objects.inv  optimization.html  parser.html  rust-basics.html  rustfmt.toml  search.html  searchindex.js  test.c  test.ll
.doctrees/: asm-basics.doctree  codegen.doctree  env-setup.doctree  environment.pickle  index.doctree  intro.doctree  irgen.doctree  llvm-basics.doctree  optimization.doctree  parser.doctree  rust-basics.doctree
.github/workflows/: documentation.yml
_sources/: asm-basics.rst.txt  codegen.rst.txt  env-setup.rst.txt  index.rst.txt  intro.rst.txt  irgen.rst.txt  optimization.rst.txt  parser.rst.txt  rust-basics.rst.txt
docs/: requirements.txt
docs/slides/: intro.typ
docs/source/: asm-basics.rst  codegen.rst  conf.py  env-setup.rst  index.rst  intro.rst  irgen.rst  llvm-basics.rst  parser.rst  rust-basics.rst
source/: codegen.rst  conf.py  index.rst  optimization.rst  rust-basics.rst
src/: backend.rs  frontend.rs  infra.rs  ir.rs  lib.rs  main.rs
src/backend/: block.rs  codegen.rs  context.rs  func.rs  imm.rs  inst.rs  lower.rs  operand.rs  regalloc.rs  regs.rs  test.txt  test2.txt
src/frontend/: ast.rs  irgen.rs  optmize.rs  parse.rs  preprocess.rs  sysy.lalrpop  types.rs
src/infra/: linked_list.rs  storage.rs
src/ir/: block.rs  context.rs  def_use.rs  func.rs  global.rs  inst.rs  ty.rs  value.rs
src/tests/: test_reg_alloc.rs
(+22 files in other folders)
