[package]
name = "nkucc"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
thiserror = "1.0.61"
clap = { version = "4.5.8", features = ["string"] }

lalrpop-util = { version = "0.20.2", features = ["lexer"], optional = true }

regex = "1.7"

[build-dependencies]
lalrpop = "0.20.2"

[features]
default = [
    "target-riscv64",
    "frontend-sysy",  # comment this if its too slow to compile
]

target-riscv64 = []

frontend-sysy = ["dep:lalrpop-util"]
